--- a/ilk_projem/assets/css/_reboot.css
+++ b/ilk_projem/assets/css/_reboot.css
@@ -17,7 +17,9 @@ ul, ol
 button {
     border: none;
 }
-
+body {
+    font-family: 'Montserrat', sans-serif;
+}
 a {
     display: inline-block;
     text-decoration: none;
