--- a/ilk_projem/assets/css/_button.css
+++ b/ilk_projem/assets/css/_button.css
@@ -17,4 +17,13 @@
     box-shadow: 0px 5px 5px rgba(75, 93, 104, 0.1);
     background-color: #ffffff;
     color: #212353;
+    font-size: 16px;
+    font-weight: 900;
+}
+
+.purple-button {
+    background-color: #9C69E2;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 900;
 }
