--- a/ilk_projem/assets/css/_section.css
+++ b/ilk_projem/assets/css/_section.css
@@ -1,4 +1,32 @@
-.hero-section .hero-content h1 {
-    font-size: 80px;
-    font-size: 700;
+@media screen and (min-width: 1024px) {
+    .hero-section .hero-content h1 {
+        max-width: 645px;
+        font-size: 80px;
+    }
+    .hero-section .hero-content p {
+        width: 380px;
+        margin-bottom: 50px;
+    }
+
+    .hero-section .hero-content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+
 }
+
+
+.hero-section .hero-content h1 {
+    margin-bottom: 50px;
+    font-size: 700;
+    
+}
+
+.hero-section .hero-content p {
+    color: #4B5D68;
+    font-weight: 500;
+    line-height: 2;
+}
+
