--- a/ilk_projem/assets/css/_reboot.css
+++ b/ilk_projem/assets/css/_reboot.css
@@ -1,35 +1,50 @@
 * {
     outline: none;
     box-sizing: border-box;
-
 }
-html, body, ul, ol
-{
+
+html, body, 
+ul, ol {
     padding: 0;
     margin: 0;
 }
 
-ul, ol
-{
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+ul, ol {
     list-style: none;
 }
 
 button {
+    background-color: transparent;
     border: none;
-}
-body {
     font-family: 'Montserrat', sans-serif;
 }
+
 a {
+    font-family: 'Montserrat', sans-serif;
     display: inline-block;
     text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6,
 p {
-    margin: none;
+    margin: 0;
 }
 
 figure {
     margin: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    img {
+        display: block;
+        max-width: 100%;
+    }
+
+    section {
+        text-align: center;
+    }
 }
