--- a/ilk_projem/assets/css/_reboot.css
+++ b/ilk_projem/assets/css/_reboot.css
@@ -1,50 +1,58 @@
 * {
-    outline: none;
-    box-sizing: border-box;
+  outline: none;
+  box-sizing: border-box;
 }
 
-html, body, 
-ul, ol {
-    padding: 0;
-    margin: 0;
+html,
+body,
+ul,
+ol {
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-ul, ol {
-    list-style: none;
+ul,
+ol {
+  list-style: none;
 }
 
 button {
-    background-color: transparent;
-    border: none;
-    font-family: 'Montserrat', sans-serif;
+  background-color: transparent;
+  border: none;
+  font-family: "Montserrat", sans-serif;
 }
 
 a {
-    font-family: 'Montserrat', sans-serif;
-    display: inline-block;
-    text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  display: inline-block;
+  text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 p {
-    margin: 0;
+  margin: 0;
 }
 
 figure {
-    margin: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 1024px) {
-    img {
-        display: block;
-        max-width: 100%;
-    }
+  img {
+    display: block;
+    max-width: 100%;
+  }
 
-    section {
-        text-align: center;
-    }
+  section {
+    text-align: center;
+  }
 }
