header 2.kısım yarı yapıldı
header part 2

--- a/ilk_projem/assets/css/_section.css
+++ b/ilk_projem/assets/css/_section.css
@@ -40,3 +40,8 @@
     font-weight: 500;
     line-height: 2;
 }
+
+    /* @Pink section */
+.pink-section {
+    background-image: url("../img/");
+}
