--- a/ilk_projem/assets/css/style.css
+++ b/ilk_projem/assets/css/style.css
@@ -3,5 +3,6 @@
 @import './_utilities.css';
 @import './_grid.css';
 @import './_button.css';
+@import './_card.css';
 @import './_header.css';
 @import './_section.css';
