--- a/ilk_projem/assets/css/_section.css
+++ b/ilk_projem/assets/css/_section.css
@@ -41,6 +41,7 @@
 
     .features h2 {
         margin-bottom: 50px;
+        
     }
 
     .features .section-header p {
@@ -90,7 +91,7 @@
 
 /* @Features */
 
-.features h2 {
+.features .sectionheader h2 {
     font-size: 40px;
     color: #212353;
     font-weight: 700;
@@ -111,30 +112,15 @@
     flex-wrap: wrap;
 }
 
+.features .card-image,
+.features .card-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .features .card-content {
     flex: 1 0 0;
 }
 
 
-.features .card-image,
-.features .card-content {
-    padding-left: 15px;
-}
 
-
-.features .card:before {
-    content: "";
-    display: block;
-    background-repeat: no-repeat;
-    background-position: right center;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-}
-
-
-.features .card:before {
-    background-image: url("../img/card-image-1.svg");
-}
