--- a/ilk_projem/assets/css/_card.css
+++ b/ilk_projem/assets/css/_card.css
@@ -2,15 +2,17 @@
     position: relative;
 }
 
+
 .card .card-header {
     font-size: 24px;
-    color: #212353;
+    color: 212353;
     margin-bottom: 20px;
 }
 
-.card .card-body {
-    color: #4B5D68;
+.card .card-body{
+    color:#4B5D68;
     font-size: 16px;
     line-height: 1.5;
-    margin-bottom: 20px;
+    margin-bottom: 20;
 }
+
