--- a/ilk_projem/assets/css/_utilites.css
+++ b/ilk_projem/assets/css/_utilites.css
@@ -9,3 +9,24 @@
 .text-center {
     text-align: center;
 }
+
+.text-white {
+    color: #FFFFFF;
+
+}
+
+.font-size-40 {
+    font-size: 40px;
+}
+
+.font-weight-700 {
+    font-weight: 700;
+}
+
+.margin-bottom-30 {
+    margin-bottom: 30px;
+}
+
+.margin-bottom-80 {
+    margin-bottom: 80px;
+}
