--- a/ilk_projem/assets/css/_comment.css
+++ b/ilk_projem/assets/css/_comment.css
@@ -1,14 +1,27 @@
-.comments .comment-slider .comment-item {
-    background-color: #FFFFFF;
+.comments .comment-slider {
     display: flex;
-    flex-wrap: nowrap;
-    max-width: 400px;
-    border-radius: 10px;
-    padding: 50px 25px;
+    align-items: center;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 
+.comments .comment-slider .comment-item {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.comments .comment-slider .comment-item-container {
+    background-color: #FFFFFF;
+    display: flex;
+    flex-wrap: wrap;
+    width: 400px;
+    border-radius: 50px 25px;
+
+}
+
+
 .comments .comment-slider .comment-item.active {
-    max-width: 645px;
+    width: 645px;
 
 }
 
