--- a/ilk_projem/assets/css/_section.css
+++ b/ilk_projem/assets/css/_section.css
@@ -146,8 +146,22 @@
 
 /* @Comments */
 
+.comments {
+    position: relative;
+    overflow-x: hidden;
+}
+
+.comments .swiper-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
+
 .comments-background {
     background-image: url("../img/testimonials.svg");
     background-repeat: no-repeat;
     background-size: cover;
+    height: 710px;
 }
