--- a/ilk_projem/assets/css/_utilites.css
+++ b/ilk_projem/assets/css/_utilites.css
@@ -30,3 +30,11 @@
 .margin-bottom-80 {
     margin-bottom: 80px;
 }
+
+.margin-bottom-150 {
+    margin-bottom: 150px;
+}
+
+.margin-bottom-95 {
+    margin-bottom: 95px;
+}
