--- a/ilk_projem/assets/css/_footer.css
+++ b/ilk_projem/assets/css/_footer.css
@@ -4,7 +4,6 @@
     }
 }
 
-
 .footer {
     margin-top: 150px;
     padding-top: 100px;
@@ -32,16 +31,13 @@
     margin-bottom: 10px;
 }
 
-
-
 .footer .logo {
     display: block;
-    
     margin-bottom: 63px;
 }
 
 .footer .logo img {
-    margin: 0 auto;
+    margin: 0 auto
 }
 
 .footer-menu-title {
@@ -65,7 +61,6 @@
     margin-right: -7px;
 }
 
-
 .social-media-list .social-media-item {
     padding-left: 7px;
     padding-right: 7px;
@@ -75,16 +70,17 @@
     border-radius: 100%;
     display: flex;
     align-items: center;
-    justify-content: unset;
+    justify-content: center;
     height: 30px;
-    background-color: #ddd;
-    
+    width: 30px;
+    background-color: #212353;
 }
 
 @media screen and (max-width: 1024px) {
     .footer {
-     text-align: center;
+        text-align: center;
     }
+
     .mobile-margin-bottom {
         margin-bottom: 30px;
     }
